[package]
name = "xc220b3-demo"
version = "0.1.0"
authors = ["runner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rust-crypto= "0.2.36"
hex= "0.4.3"
base64= "0.13.0"
rustc-serialize = "0.3.24"
rand = "0.8.5"
blake3 = "1.3.1"
k256 = { version = "0.11.6", features = ["ecdh"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
constant_time_eq = "0.2.4"
arrayvec = "0.7.2"
pqc_kyber = "0.3.0"
