[package]
name = "xc220b3"
version = "0.1.0"
authors = ["Azz [asteria@valera.co]"]
edition = "2021"
description = "Quantum-safe stream encryption using XChaCha20 and BLAKE3 along with various other cryptographic primitives."
repository = "https://github.com/valeralabs/xc220b3"
license = "MIT OR Apache-2.0"

[dependencies]
hex= "0.4.3"
blake3 = "1.3.1"
k256 = { version = "0.11.6", features = ["ecdh"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
constant_time_eq = "0.2.4"
arrayvec = "0.7.2"
rand = "0.8.5"
