[package]
name = "examples"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
xc220b3 = { path = "../xc220b3", features = ["tracing"] }

[[example]]
name = "basic"
path = "basic.rs"

[features]
