[package]
name = "xc220b3"
version = "0.2.0"
authors = ["Azz [asteria@valera.co]"]
edition = "2021"
description = "Quantum-safe stream encryption using XChaCha20 and BLAKE3 along with various other cryptographic primitives."
repository = "https://github.com/valeralabs/xc220b3"
license = "MIT OR Apache-2.0"

[dependencies]
blake3 = "1.3.1"
k256 = { version = "0.11.6", features = ["ecdh"],  default-features = false }
tracing = "0.1.36"
constant_time_eq = "0.2.4"
arrayvec = { version = "0.7.2", default-features = false }
rand_core = "0.6.4"
cfg-if = "1.0.0"

[features]
default = []
tracing = []
